--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
   "name": "jeyroik/extas-envs",
   "description": "Extas envs package",
   "require": {
-    "jeyroik/extas-base": "*",
-    "jeyroik/extas-installer": "*"
+    "jeyroik/extas-base": "1.*",
+    "jeyroik/extas-installer": "1.*"
   },
   "autoload": {
     "psr-4": {
